# ml-tasks

./: .gitignore  README.md  pyproject.toml  setup.cfg
code/: commons.py
code/k_means/: main.py  utils.py
notebooks/: K-Means Final.ipynb  K-Means View Another.ipynb  K-Means View.ipynb
notebooks/bayes/: Bayes View.ipynb
notebooks/k-means/: K-Means View.ipynb
notebooks/knn/: KNN View.ipynb
notebooks/logistic_regression/: Logistic Regression View.ipynb
notebooks/mst/: MST View.ipynb
notebooks/svm/: SVM Final.ipynb  SVM View.ipynb
resources/: bayes_data.csv  knn_data.csv  log_reg_data.csv
src/bayes/: main.py  utils.py
src/commons/: classes.py  methods.py  types.py
src/k_means/: main.py  utils.py
src/knn/: main.py  utils.py
src/log_reg/: main.py  utils.py
src/mst/: main.py  utils.py
src/svm/: full.py  main.py  utils.py
src/utils/: generate_knn_data.py
tests/: conftest.py
tests/test_bayes/: conftest.py  test_bayes_main.py  test_bayes_utils.py
tests/test_code/: conftest.py
tests/test_code/test_commons/: test_random_points.py
tests/test_code/test_k_means/: test_main.py  test_utils.py
tests/test_k_means/: test_km_utils.py
tests/test_knn/: test_knn_main.py  test_knn_utils.py
tests/test_mst/: conftest.py  test_mst_main.py  test_mst_utils.py
tests/test_src/: conftest.py
tests/test_src/test_bayes/: conftest.py
tests/test_src/test_commons/: test_random_points.py
tests/test_src/test_k_means/: test_main.py  test_points.py  test_utils.py
tests/test_svm/: conftest.py  test_svm_full.py  test_svm_main.py  test_svm_utils.py
(+5 files in other folders)
