[tool.poetry]
name = "ml-tasks"
version = "0.0.1"
description = "Tasks for ML course"
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"
numpy = "^1.17"
jupyter = "^1.0"
pytest-cov = "^2.7"
pillow = "^6.1"
ipython = "^7.9"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
